--- a/Gree_control.tpl.html
+++ b/Gree_control.tpl.html
@@ -85,7 +85,7 @@
         };">
 
       <div>
-       <ui-knob value="knob2.value" options="knob2.options" ng-click="sendCmd(AirconTargetTemp , knob2.value)"/>
+       <ui-knob value="knob2.value" options="knob2.options" ng-click="sendCmd('AirconTargetTemp', knob2.value)"/>
       </div>
    </div>
   </div>
